Add single-blog page

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -80,7 +80,7 @@
     --color-shade26: #FF557B;
     --color-shade27: #3B72FE;
     --color-shade28: #FCFCFF ;
-    --color-shade29: ;
+    --color-shade29: #FAFBFF;
     --color-shade30: ;
 
     
