--- a/scss/components/_cp-comment.scss
+++ b/scss/components/_cp-comment.scss
@@ -1,75 +1,73 @@
 .comment-section {
-    margin-bottom: 35px;
+    .comment-area-wrapper {
+        margin-bottom: 80px;
+    }
     .title {
-        font-family: $font-outfit;
-        font-weight: 600;
-        @include toRem(font-size, 24);
-        line-height: 30px;
+        font-family: $font-roboto;
+        font-weight: 700;
+        @include toRem(font-size, 22);
+        line-height: 26px;
         color: $color-title;
-        padding-bottom: 20px;
+        margin-bottom: 30px;
     }
     .comment-reply {
         margin-left: 45px;
     }
     .comment-wrapper {
-        gap: 30px;
-        padding: 30px 0;
-        border-bottom: 1px solid $border-color;
+        gap: 18px;
+        margin-bottom: 41px;
         &:last-child {
-            border-bottom: none;
+            margin-bottom: 0;
         }
 
         .comment-content {
             flex: 1;
-            .commentor-info {
-                .commentor-name {
-                    font-family: $font-outfit;
-                    font-weight: 500;
-                    @include toRem(font-size, 20);
-                    line-height: 26px;
-                    color: $color-title;
-                    margin-bottom: 12px;
-                }
-                .comment-meta {
-                    span {
-                        font-family: 'Hind';
+            .comment-content-top {
+                margin-bottom: 22px;
+                .commentor-info {
+                    .commentor-name {
+                        font-family: $font-roboto;
                         font-weight: 500;
-                        @include toRem(font-size, 14);
-                        line-height: 20px;
-                        color: #9D9CAE;
+                        @include toRem(font-size, 18);
+                        line-height: 21px;
+                        color: $color-title;
+                        margin-bottom: 5px;
+                    }
+                    .comment-meta {
+                        span {
+                            font-family: $font-roboto;
+                            font-weight: 400;
+                            font-size: 15px;
+                            line-height: 18px;
+                            color: #6B707F;
+                        }
+                    }
+                    .comment {
+                        p {
+                            font-family: 'Hind';
+                            font-weight: 400;
+                            font-size: 16px;
+                            line-height: 26px;
+                            color: #4F536C;
+                        }
+                        margin-bottom: 12px;
                     }
                 }
-                .comment {
-                    p {
-                        font-family: 'Hind';
-                        font-weight: 400;
-                        font-size: 16px;
-                        line-height: 26px;
-                        color: #4F536C;
+                .reply-btn {
+                    font-family: $color-title;
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 30px;
+                    color: $color-title;
+                    gap: 7px;
+                    &:hover {
+    
+                        svg {
+                            fill: $color-white;
+                        }
                     }
-                    margin-bottom: 12px;
                 }
-            }
-            .reply-btn {
-                background: #F7F7FB;
-                border-radius: 10px;
-                padding: 8px 19px;
-                font-family: $font-outfit;
-                font-weight: 500;
-                @include toRem(font-size, 14);
-                line-height: 18px;
-                color: $color-primary;
-                text-transform: uppercase;
-                color: #543EE8;
 
-                &:hover {
-                    color: $color-white;
-                    border-color: transparent;
-                    background: $color-primary;
-                    svg {
-                        fill: $color-white;
-                    }
-                }
             }
         }
     }
