--- a/scss/components/_cp-section-text-content.scss
+++ b/scss/components/_cp-section-text-content.scss
@@ -19,6 +19,7 @@
         border-bottom: none;
         margin: 0;
         padding-bottom: 20px;
+        text-align: left;
     }
 }
 .para-text {
