--- a/scss/components/__components-dir.scss
+++ b/scss/components/__components-dir.scss
@@ -52,5 +52,8 @@
 @import 'cp-sidebar-nav';
 @import 'cp-accordion';
 @import 'cp-contact-form';
+@import 'cp-widget-forum';
+@import 'cp-widget-recent-topic';
+@import 'cp-forum-login-form';
 
 
