--- a/scss/layouts/_lo-hero.scss
+++ b/scss/layouts/_lo-hero.scss
@@ -290,4 +290,28 @@
             }
         }
     }
+    &--style-7 {
+        background: #FFFBEB;
+        padding: 205px 0 130px 0;
+        &::before {
+            content: url("../../images/hero-section/page-banner-shape.png");
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            z-index: -1;
+        }
+        .rt-hero-section-content-wrapper {
+            .searchbox-container {
+                box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.05);
+            }
+            .search-text {
+                p, span, a {
+                    color: $color-title;
+                }
+            }
+        }
+    }
 }
