--- a/scss/layouts/_lo-hero.scss
+++ b/scss/layouts/_lo-hero.scss
@@ -1,6 +1,9 @@
 
 .rt-hero-section {
-    padding: 210px 0 154px 0;
+    padding: 150px 0 100px 0;
+    @include media-only('sm', min) {
+        padding: 210px 0 154px 0;
+    }
     position: relative;
     overflow: hidden;
     z-index: 0;
@@ -86,7 +89,10 @@
     }
 
     &--style-2 { 
-        padding: 215px 0 286px 0;
+        padding: 120px 0;
+        @include media-only('sm', min) {
+            padding: 215px 0 286px 0;
+        }
         &:before {
             content: url("../../images/hero-section/BG-home-2.png");
             position: absolute;
@@ -146,7 +152,10 @@
 
     &--style-3 {
         background: #FFFAD1;
-        padding-bottom: 303px;
+        padding: 120px 0 175px 0;
+        @include media-only('sm', min) {
+            padding-bottom: 303px;
+        }
         &::before {
             content: url("../../images/hero-section/BG-home-3.png");
             position: absolute;
@@ -224,7 +233,10 @@
     }
     &--style-5 {
         background: #EBFFED;
-        padding: 191px 0 168px 0;
+        padding: 150px 0 100px 0;
+        @include media-only('sm', min) {
+            padding: 191px 0 168px 0;
+        }
         &::before {
             content: url("../../images/hero-section/page-banner-shape.png");
             position: absolute;
