Add responsive elements page

--- a/scss/components/_cp-element-info-card.scss
+++ b/scss/components/_cp-element-info-card.scss
@@ -54,7 +54,7 @@
     border: 1px solid #DEDEDE;
     border-radius: 20px;
     padding: 30px 35px 24px 38px;
-    width: 416px;
+    // width: 416px;
     // height: 180px;
     .title {
         line-height: 23px;
