--- a/scss/components/_cp-searchbox.scss
+++ b/scss/components/_cp-searchbox.scss
@@ -60,6 +60,16 @@
             }
         }
     }
+    .searchbox-textfield {
+        .rt-searchbox-form {
+            .input-area {
+                gap: 6px;
+                svg {
+                    margin-top: -2px;
+                }
+            }
+        }
+    }
     .searchbox-submit {
         .rt-searchbox-btn {
             font-family: $font-roboto;
@@ -98,6 +108,16 @@
     }
     &--style-4 {
         box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.05);
+        .searchbox-textfield {
+            .rt-searchbox-form {
+                .input-area {
+                    gap: 6px;
+                    svg {
+                        margin-top: -2px;
+                    }
+                }
+            }
+        }
         .searchbox-submit {
             .rt-searchbox-btn {
                 background: #0289FF;
