--- a/scss/layouts/_lo-hero.scss
+++ b/scss/layouts/_lo-hero.scss
@@ -304,7 +304,10 @@
     }
     &--style-7 {
         background: #FFFBEB;
-        padding: 205px 0 130px 0;
+        padding: 120px 0 80px 0;
+        @include media-only('sm', min) {
+            padding: 205px 0 130px 0;
+        }
         &::before {
             content: url("../../images/hero-section/page-banner-shape.png");
             position: absolute;
