--- a/scss/layouts/_lo-single-blog.scss
+++ b/scss/layouts/_lo-single-blog.scss
@@ -86,6 +86,7 @@
         }
         .single-blog-tag-share {
             margin-bottom: 55px;
+            row-gap: 25px;
             .single-tag-area {
                 ul {
                     gap: 5px;
