Add animation to home-2, home-3 pages

--- a/scss/components/_cp-community-post.scss
+++ b/scss/components/_cp-community-post.scss
@@ -45,5 +45,6 @@
     .community-posts-wrapper {
         border: 1px solid #E7E7E7;
         border-radius: 10px;
+        overflow: hidden;
     }
 }
