--- a/scss/components/_cp-rt-card.scss
+++ b/scss/components/_cp-rt-card.scss
@@ -273,6 +273,9 @@
 
         &:hover {
             box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
+            .icon {
+                animation: rubberBand 1s forwards;
+            }
         }
     }
     &--style-6 { 
@@ -317,7 +320,7 @@
             font-size: 18px;
             line-height: 30px;
             &:hover {
-                color: #8A58F3;
+                color: $color-title;
                 padding: 0;
                 background: unset;
                 border: none;
