--- a/scss/components/_cp-element-info-card.scss
+++ b/scss/components/_cp-element-info-card.scss
@@ -46,6 +46,12 @@
             border: 1px solid #1D2746;
             border-radius: 500px;
             padding: 6px 21px;
+            &::after {
+                background: $color-secondary;
+            }
+            &:hover {
+                color: $color-white;
+            }
         }
     }
 }
