--- a/scss/layouts/_lo-contact-banner.scss
+++ b/scss/layouts/_lo-contact-banner.scss
@@ -42,6 +42,10 @@
             font-size: 20px;
             line-height: 23px;
             color: $color-white;
+            &:hover {
+                background: $color-white;
+                color: $color-title;
+            }
         }
     }
 }
