--- a/scss/layouts/_lo-topic-details.scss
+++ b/scss/layouts/_lo-topic-details.scss
@@ -229,6 +229,9 @@
                                 font-size: 16px;
                                 line-height: 19px;
                                 color: $color-white;
+                                &:hover {
+                                   background-color: #026992;
+                                }
                             }
                         }
                     }
