--- a/scss/components/_cp-buttons.scss
+++ b/scss/components/_cp-buttons.scss
@@ -4,38 +4,25 @@
 
 // Button 
 .button {
-    font-family: $font-outfit;
+    font-family: $font-roboto;
     @include toRem(font-size, 16);
     font-weight: 500;
-    line-height: 0;
-    letter-spacing: 0.01em;
+    line-height: 19px;
     text-decoration: none;
     text-transform: capitalize;
     cursor: pointer;
-    border-radius: 50px;
+    border-radius: 500px;
     padding: 20px 30px;
-    // z-index: 1 !important;
-
-    &:hover {
-        svg {
-            animation: iconMove 0.5s;
-        }
-    }
 }
 
 // Primnary Button
+
 .button-primary {
-    display: inline-flex;
     align-items: center;
-    gap: 10px;
-    background: $color-primary;
+    background: $color-secondary;
     color: $color-white;
-    position: relative;
     overflow: hidden;
-    z-index: 1;
-    svg {
-        transition: all 0.3s ease;
-    }
+
     &:hover {
         // color: $color-primary;
         // background-color: transparent;
@@ -104,266 +91,176 @@
     }
 }
 
-
-
-// primary button animation
-
-
-.btn-28:before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0%;
-    height: 50%;
-    background-color: $color-secondary;
-    transition: all 0.5s ease-in-out;
-    z-index: -1;
-  }
-  .btn-28:after {
-    content: "";
-    position: absolute;
-    top: 0%;
-    right: 0%;
-    width: 0%;
-    height: 50%;
-    background-color: $color-secondary;
-    transition: all 0.5s ease-in-out;
-    z-index: -1;
-  }
-  .btn-28:hover {
-    color: #f1f1f1;
-    border-color: $color-secondary;
-  }
-  .btn-28:hover:before,
-  .btn-28:hover:after {
-    width: 100%;
-  }
-  .btn-28:active {
-    color: #333;
-    border-color: #00a7fc;
-    background-color: #00a7fc;
-  }
-  .btn-28:active:before,
-  .btn-28:active:after {
-    background-color: #00a7fc;
-  }
-
-//
-.btn-28-reverse:before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0%;
-    height: 50%;
-    background-color: #FFCD1F;
-    transition: all 0.5s ease-in-out;
-    z-index: -1;
-  }
-  .btn-28-reverse:after {
-    content: "";
-    position: absolute;
-    top: 0%;
-    right: 0%;
-    width: 0%;
-    height: 50%;
-    background-color: #FFCD1F;
-    transition: all 0.5s ease-in-out;
-    z-index: -1;
-  }
-  .btn-28-reverse:hover {
-    color: #f1f1f1;
-    border-color: $color-primary;
-    color: $color-secondary;
-    svg {
-        fill: $color-secondary;
-    }
-  }
-  .btn-28-reverse:hover:before,
-  .btn-28-reverse:hover:after {
-    width: 100%;
-  }
-  .btn-28-reverse:active {
-    color: #333;
-    border-color: #00a7fc;
-    background-color: #00a7fc;
-  }
-  .btn-28-reverse:active:before,
-  .btn-28-reverse:active:after {
-    background-color: #00a7fc;
-  }
-
-
-
 //   -------------
 
+// btn-animation-1
 
-// button 11
+.btn {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  position: relative;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  transition: all 0.5s;
+  border: 3px solid #f45556;
+  color: #f45556;
+  overflow: hidden;
+  
+  &:after {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+    width: 100%;
+    height: 0;
+    top: 50%;
+    left: 50%;
+    background: $color-primary;
+    opacity: 0;
+    -webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+    -moz-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+    -ms-transform: translateX(-50%) translateY(-50%) rotate(45deg);
+    transform: translateX(-50%) translateY(-50%) rotate(45deg); 
+  }
+  
+  &:hover {
+    color: #fff;   
+    border-radius: 0px;
+    transition: 1s;
+    
+    &:after {
+     opacity: 1;
+     height: 160%;
+    }
+  }
+  
+  span {
+    position: relative;
+    z-index: 2;
+  }
 
-
-@mixin button($bcolor,
-$url,
-$x1,
-$y1,
-$bor,
-$col) {
- background: $bcolor;
- -webkit-mask: url($url);
- mask: url($url);
- -webkit-mask-size: $x1 $y1;
- mask-size: $x1 $y1;
- border: $bor;
- color: $col;
+  &-style--2 {
+    &:after { 
+      // background: $color-primary !important;
+    }
+  }
 }
 
-
-.button-container-1 {
+// btn-animation-2
+.e-button {
+  display: inline-block;
   position: relative;
-  width: 100px;
-  height: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 6vh;
+  padding: 10px;
   overflow: hidden;
-  border: 1px solid;
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  font-size: 20px;
-  transition: 0.5s;
-  letter-spacing: 1px;
-  border-radius: 8px;
- 
-  button {
-   width: 101%;
-   height: 100%;
-   font-family: 'Lato', sans-serif;
-   font-weight: 300;
-   font-size: 11px;
-   letter-spacing: 1px;
-   font-weight: bold;
- 
-   @include button(#000,
-   "https://raw.githubusercontent.com/robin-dela/css-mask-animation/master/img/nature-sprite.png",
-   2300%,
-   100%,
-   none,
-   #fff);
-   cursor: pointer;
-   -webkit-animation: ani2 0.7s steps(22) forwards;
-   animation: ani2 0.7s steps(22) forwards;
- 
-   &:hover {
-    -webkit-animation: ani 0.7s steps(22) forwards;
-    animation: ani 0.7s steps(22) forwards;
-   }
+   
+  &__link {
+    text-decoration: none;
+    color: #fff;
+    font-family: Helvetica;
+    font-size: 30px;
+    text-transform: uppercase;
+    display: block; 
+    text-align: center;
+    position: relative;  
+    padding: 10px 5px;
+    border: 3px solid #fff;
   }
- }
+  
+  .line {
+    position: absolute;
+    background-color: #fff;
+    
+    &--one {
+      width: 1px;
+      height: 100%; 
+      left: 0;
+      top: 0;
+      transform: translate3d(0px, 102%, 0px);
+    }
+    
+    &--two {
+      width: 100%;
+      height: 1px;
+      left: 0;
+      top: 0;
+      transform: translate3d(-102%, 0px, 0px);
 
-.button-container-2 {
-  position: relative;
-  width: 100px;
-  height: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 7vh;
+    }
+    
+    &--three {
+      width: 1px;
+      height: 100%;
+      right: 0;
+      top: 0;
+      transform: translate3d(0px,-102%,0px);
+
+    }
+    &--four {
+      width: 100%;
+      height: 1px;
+      left: 0;
+      bottom: 0;
+      transform: translate3d(102%,0px,0px);
+
+    }
+  }
+  
+  &:hover {
+    .line {
+      opacity: 1;
+      &--one, &--two ,&--three, &--four {
+        transform: translate3d(0, 0, 0);
+        transition: transform .3s ease-in-out;
+      }
+      &--one {
+        transition-delay: 0s;
+      }
+      &--two {
+        transition-delay: 250ms;
+      }
+      &--three {
+        transition-delay: 500ms;
+      }
+      &--four {
+        transition-delay: 750ms;
+      }
+    }
+  }
+}
+
+//btn-animation-3
+
+.coolBeans {
   overflow: hidden;
-  border: 1px solid #000;
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  transition: 0.5s;
-  letter-spacing: 1px;
-  border-radius: 8px;
- 
-  button {
-   width: 101%;
-   height: 100%;
-   font-family: 'Lato', sans-serif;
-   font-weight: 300;
-   font-size: 11px;
-   letter-spacing: 1px;
-   font-weight: bold;
- 
-   @include button(#000, "https://raw.githubusercontent.com/robin-dela/css-mask-animation/master/img/urban-sprite.png",
-   3000%,
-   100%,
-   none,
-   #fff);
-   cursor: pointer;
-   -webkit-animation: ani2 0.7s steps(29) forwards;
-   animation: ani2 0.7s steps(29) forwards;
- 
-   &:hover {
-    -webkit-animation: ani 0.7s steps(29) forwards;
-    animation: ani 0.7s steps(29) forwards;
-   }
+  position: relative;
+  text-decoration: none;
+  transition: .2s transform ease-in-out;
+  will-change: transform;
+  z-index: 0;
+  &::after {
+    background-color: $color-white;
+    border-radius: 3rem;
+    content: '';
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translate(-100%, 0) rotate(10deg);
+    transform-origin: top left;
+    transition: .2s transform ease-out;
+    will-change: transform;
+    z-index: -1;
   }
- }
- 
- 
- .mas {
-     position: absolute;
-     color: #000;
-     text-align: center;
-     width: 101%;
-     font-family: 'Lato', sans-serif;
-     font-weight: 300;
-     position: absolute;
-     font-size: 11px;
-     margin-top: 17px;
-     overflow: hidden;
-     font-weight: bold;
- 
- }
- 
- @-webkit-keyframes ani {
-  from {
-   -webkit-mask-position: 0 0;
-   mask-position: 0 0;
+  &:hover::after {
+    transform: translate(0, 0);
   }
- 
-  to {
-   -webkit-mask-position: 100% 0;
-   mask-position: 100% 0;
+  &:hover {
+    color: indigo;
+    transform: scale(1.05);
+    will-change: transform;
+    border: 1px solid transparent !important;
   }
- }
- 
- @keyframes ani {
-  from {
-   -webkit-mask-position: 0 0;
-   mask-position: 0 0;
-  }
- 
-  to {
-   -webkit-mask-position: 100% 0;
-   mask-position: 100% 0;
-  }
- }
- 
- @-webkit-keyframes ani2 {
-  from {
-   -webkit-mask-position: 100% 0;
-   mask-position: 100% 0;
-  }
- 
-  to {
-   -webkit-mask-position: 0 0;
-   mask-position: 0 0;
-  }
- }
- 
- @keyframes ani2 {
-  from {
-   -webkit-mask-position: 100% 0;
-   mask-position: 100% 0;
-  }
- 
-  to {
-   -webkit-mask-position: 0 0;
-   mask-position: 0 0;
-  }
- }
- 
- a{
-   color:#00ff95;
- }
+}
