--- a/scss/components/_cp-contact-form.scss
+++ b/scss/components/_cp-contact-form.scss
@@ -30,5 +30,9 @@
         width: 180px;
         padding: 19px 30px;
         margin-left: 16px;
+        @include transition;
+        &:hover {
+            background-color: #0b9b70;
+        }
     }
 }
