--- a/scss/components/_cp-widget-recent-topic.scss
+++ b/scss/components/_cp-widget-recent-topic.scss
@@ -31,6 +31,9 @@
                     line-height: 26px;
                     color: $color-title;
                     margin-bottom: 10px;
+                    &:hover {
+                        color: $color-secondary;
+                    }
                 }
             }
             .author-info {
