--- a/scss/components/_cp-widget-search.scss
+++ b/scss/components/_cp-widget-search.scss
@@ -30,6 +30,10 @@
                 border: none;
                 width: 60px;
                 height: 58px;
+                @include transition;
+                &:hover {
+                    background: #0b9b70;
+                }
             }
         }
     }
