Updated footer animation

--- a/scss/components/_cp-community-post.scss
+++ b/scss/components/_cp-community-post.scss
@@ -28,6 +28,9 @@
                     font-size: 20px;
                     line-height: 23px;
                     color: $color-title;
+                    &:hover {
+                        color: $color-shade25;
+                    }
                 }
             }
         }
