--- a/scss/layouts/_lo-best-online-doc.scss
+++ b/scss/layouts/_lo-best-online-doc.scss
@@ -188,6 +188,7 @@
                             font-weight: 600;
                             font-size: 16px;
                             line-height: 19px;
+                            border: 1px solid transparent;
                             &:hover {
                                 color: $color-title;
                             }
