--- a/scss/layouts/_lo-footer.scss
+++ b/scss/layouts/_lo-footer.scss
@@ -28,28 +28,42 @@
                         a {
                             @extend .para-text;
                             line-height: 40px;
+                            position: relative;
 
                             &::before {
-                                content: "";
+                                content: '';
+                                transform-origin: 100% 50%;
+                                transform: scale3d(0, 1, 1);
+                                transition: transform 0.4s cubic-bezier(0.7, 0, 0.2, 1);
+                                top: 90%;
+                            }
+                            &::after {
+                                content: '';
+                                top: calc(90% + 4px) !important;
+                                transform-origin: 0% 50%;
+                                transform: scale3d(0, 1, 1);
+                                transition: transform 0.4s cubic-bezier(0.7, 0, 0.2, 1);
+                            }
+                            &::before, &::after {
                                 position: absolute;
-                                width: 12px;
-                                height: 3px;
-                                background: #543EE8;
-                                border-radius: 50px;
-                                left: -12px;
-                                top: 17px;
-                                @include transition;
-                                opacity: 0;
-                                visibility: hidden;
+                                width: 100%;
+                                height: 1px;
+                                background: $color-shade25;
+                                // top: 100%;
+                                left: 0;
+                                pointer-events: none;
                             }
 
                             &:hover {
-                                // color: $color-white;
-                                padding-left: 20px;
                                 &::before {
-                                    left: 0;
-                                    opacity: 1;
-                                    visibility: visible;
+                                    transform-origin: 0% 50%;
+                                    transform: scale3d(1, 1, 1);
+                                    transition-timing-function: cubic-bezier(0.4, 1, 0.8, 1);
+                                }
+                                &::after {
+                                    transform-origin: 100% 50%;
+                                    transform: scale3d(1, 1, 1);
+                                    transition-timing-function: cubic-bezier(0.4, 1, 0.8, 1);
                                 }
                             }
                         }
@@ -145,7 +159,11 @@
                     font-size: 20px;
                     line-height: 30px;
                     text-decoration: underline;
+                    text-decoration-thickness: 1px;
                     color: $color-white;
+                    &:hover {
+                        color: $color-shade25;
+                    }
                 }
             }
         }
